--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@netlify/plugin-nextjs": "^5.11.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "motion": "^12.12.1",
